# pH

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
kernel/: .gitignore  Makefile  config  v4.9.56.sha256  v5.3.sha256
kernel/init/: Makefile  init.c
kernel/keys/: gregkh.key  minipli.key  torvalds.key
kernel/patches/: 0001-virtio-wl.patch  0002-bonsai-tree.patch  0002-cpuidle-skip-synchronize_rcu-on-single-CPU-systems.patch  0003-sysrq-skip-synchronize_rcu-if-there-is-no-old-op.patch  0005-vmstats-wakeups.patch  0006-pci-probe.patch  0007-cgroup.patch  0008-smpboot-reuse-timer-calibration.patch  0009-perf.patch  0010-pci-probe-identify-known-devices.patch  0011-init-no-wait-for-the-known-devices.patch  0012-ksm-wakeups.patch  0014-xattr-allow-setting-user.-attributes-on-symlinks-by-.patch  0015-crypto-allow-testmgr-to-be-skipped.patch  0016-silence-Power-down-msg.patch  0017-fs-9p-fix-create-unlink-getattr-idiom.patch  0018-rdrand.patch  0019-reboot.patch  0020-no-early-modprobe.patch  0022-Show-restart-information-using-info-log.patch  0023-virtio-wayland.patch
ph-init/: Cargo.toml
ph-init/src/: error.rs  init.rs  log.rs  main.rs  netlink.rs  service.rs  setup.rs  sys.rs
ph/src/: main.rs
ph/src/devices/virtio_9p/: readdir.rs
ph/src/kvm/: mod.rs
ph/src/memory/: mod.rs  ram.rs
ph/src/virtio/: config.rs  consts.rs
ph/src/vm/: kernel_cmdline.rs
ph/src/vm/setup/: kernel.rs  mod.rs
rust/: Cargo.toml
rust/src/: main.rs
rust/src/devices/: mod.rs  rtc.rs  virtio_block.rs  virtio_rng.rs  virtio_serial.rs
rust/src/devices/virtio_9p/: commands.rs  filesystem.rs  mod.rs  pdu.rs  synthetic.rs
rust/src/devices/virtio_wl/: device.rs  pipe.rs  socket.rs
rust/src/disk/: memory.rs  mod.rs  raw.rs  realmfs.rs
rust/src/init/: error.rs  main.rs  sys.rs
rust/src/kvm/: ioctl.rs  mod.rs
rust/src/memory/: manager.rs  mmap.rs  mod.rs  ram.rs
rust/src/system/: bitvec.rs  epoll.rs  errno.rs  filedesc.rs  ioctl.rs  mod.rs  socket.rs
rust/src/virtio/: bus.rs  chain.rs  config.rs  device.rs  device_config.rs  eventfd.rs  mod.rs  pci.rs  virtqueue.rs  vring.rs
rust/src/vm/: config.rs  error.rs  io.rs  kernel_cmdline.rs  mod.rs  run.rs
rust/src/vm/setup/: cpu.rs  kernel.rs  mptable.rs
sommelier/: .gitignore  BUILD.gn  Makefile  OWNERS  README.md  config.h  sommelier-compositor.c  sommelier-data-device-manager.c  sommelier-display.c  sommelier-drm.c  sommelier-gtk-shell.c  sommelier-output.c  sommelier-pointer-constraints.c  sommelier-relative-pointer-manager.c  sommelier-seat.c  sommelier-shell.c  sommelier-shm.c  sommelier-subcompositor.c  sommelier-text-input.c  sommelier-viewporter.c  sommelier-xdg-shell.c  sommelier.c  sommelier.h  wayland-protocol.gypi  wayland_protocol.gni
sommelier/demos/: wayland_demo.cc  x11_demo.cc
src/: lib.rs  log.rs  main.rs
src/devices/: mod.rs  serial.rs  virtio_block.rs  virtio_net.rs  virtio_rng.rs  virtio_serial.rs
src/devices/virtio_9p/: commands.rs  directory.rs  fid.rs  file.rs  filesystem.rs  mod.rs  server.rs
src/devices/virtio_wl/: device.rs  mod.rs  shm.rs  vfd.rs
src/disk/: memory.rs  mod.rs  raw.rs  realmfs.rs
src/init/: cmdline.rs  sys.rs
src/kvm/: error.rs  ioctl.rs  ioeventfd.rs  mod.rs
src/memory/: address.rs  allocator.rs  drm.rs  manager.rs  mmap.rs  mod.rs  ram.rs
src/system/: epoll.rs  errno.rs  eventfd.rs  filedesc.rs  ioctl.rs  memfd.rs  mod.rs  tap.rs
src/util/: bitvec.rs  buffer.rs  mod.rs
src/virtio/: bus.rs  chain.rs  config.rs  device.rs  device_config.rs  eventfd.rs  mod.rs  pci.rs  virtqueue.rs  vring.rs
src/vm/: config.rs  error.rs  io.rs  kernel_cmdline.rs  mod.rs  run.rs  setup.rs
src/vm/arch/: error.rs  mod.rs
src/vm/arch/x86/: cpuid.rs  interrupts.rs  ioctl.rs  kernel.rs  kvm.rs  memory.rs  mod.rs  mptable.rs  registers.rs  setup.rs
src/vm/setup/: cpu.rs  mptable.rs
